# descriptor_tools

./: .gitignore  README.md
ClassifierTrainer/: logging.yaml  make.sh  regenerate.sh
ClassifierTrainer/config/: config.yaml
ClassifierTrainer/include/plog/: Util.h
ClassifierTrainer/include/plog/Formatters/: TxtFormatter.h
ClassifierTrainer/src/: CMakeLists.txt  ROC.cpp  Trainer.cpp
ClassifierTrainer/src/include/plog/: Record.h
DataCrawler/: .project  crawler.py
DenseEvaluatorRunner/: run.py  run_experiments.py
ExperimentRunner/: .project  cloud_set_1  cloud_set_2  cloud_set_3  run_experiments.py
FileCrawler/: crawler.py
LearningExperimentRunner/: definitions.py  experiment_monitor_node.py  run.py
LearningExperimentRunner/src/: config_changing_run.py  definitions.py  experiment_monitor_node.py  run.py
TrainDataExtractor/: extractor.py
